# capi

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  .trunignore  Beacon.ts  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Config.ts  Dockerfile  LICENSE  Readme.md  barrel.ts  book.toml  branded.ts  cache.ts  capi.config.ts  codegen.ts  cspell.json  deno.json  deno.jsonc  dev.ts  dprint.json  foo  foo.ts  fresh.gen.ts  help.txt  import_map.json  import_map_cache.json  import_map_examples.json  import_map_localhost.json  lock.json  main-zombienet-snapshot.ts  main.ts  mod.ts  nets.ts  polkadot_chain_spec.json  root.rs  rustfmt.toml  (+6 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  labels.yml
_/: task.ts
_docs/: Architecture.md  Guide.md  Introduction.md  Low-level_Utilities.md  Reading.md  Readme.md  SUMMARY.md  Types.md  Wallets.md  dynamic_dx.md  effects.md  todo.md
_tasks/: .gitignore  await_deployment.ts  build_known.ts  build_known_lookups.ts  build_npm_pkg.ts  build_ss58_registry_literal_type.ts  build_wasm.ts  check_circular_deps.ts  codegen.ts  dnt.ts  dnt_examples_import_map.json  download_frame_metadata.ts  downloads.ts  egdoc.ts  gen_deploy.ts  generate_artifacts.ts  run_browser.ts  star.ts  test_browser.ts  test_examples.ts  udd.ts  use_remote.ts  validate_ignore.ts  write_pub_keys.ts
bindings/: .gitignore  Addresses.ts  Block.ts  Call.ts  Entry.ts  Extrinsic.ts  KeyPage.ts  bindings.generated.js  bindings_bg.wasm  bip39.rs  common.ts  hashers.ts  mod.rs  mod.ts  sr25519.rs  ss58.rs
capn/: CapiConfig.ts  CapnConnection.ts  api.ts  binary.ts  capnHandler.ts  chainSpec.ts  createTempDir.ts  foo.ts  getMetadata.ts  mod.ts  processConfig.ts  scald.ts  server.ts  startNetwork.ts  syncConfig.ts  testUsers.ts
cli/: bin.ts  cmd-ts.ts  common.ts  init.ts  logging.ts  mod.ts  parseCommand.ts  resolveConfig.ts  resolveNets.ts  serve.ts  sync.ts
codegen/: CodecCodegen.ts  Codegen.ts  Ctx.ts  Export.ts  File.ts  Files.ts  FrameCodegen.ts  Import.ts  S.ts  SourceFile.ts  TypeCodegen.ts  blah.ts  cache.ts  codecVisitor.test.ts  codecVisitor.ts  codecs.test.ts  codecs.ts  codegen.ts  common.ts  extrinsic.ts  frameCodegen.ts  genCodecs.ts  genMetadata.ts  mod.ts  pallet.ts  rpc.ts  serve.ts  test_client.ts  type.ts  typeVisitor.ts  util.ts  utils.ts  x.ts
compat/: mod.ts  pjs.ts
components/: Meta.tsx
config/: ChainSpec.ts  Normalized.ts  Raw.ts  metadata.ts  mod.ts  validate.ts
connection/: Pool.ts  WebSocket.ts  base.ts  common.ts  mod.ts  test.ts  ws.ts
connections/: Connection.ts  common.ts  mod.ts
constants/: common.ts  mod.ts
core/: Address.ts  Addresses.ts  Base.ts  Block.ts  Call.ts  Cancellation.ts  Chain.ts  Entry.ts  Extrinsic.ts  Head.ts  Header.ts  KeyPage.ts  Metadata.ts  Pallet.ts  Read.ts  Send.ts  Signed.ts  Watch.ts  common.ts  mod.ts
crypto/: Keypair.test.ts  Keypair.ts  Sr25519.ts  bip39.rs  hashers.test.ts  hashers.ts  hex.ts  mod.rs  mod.ts  sr25519.rs  ss58.rs  ss58.test.ts  ss58.ts  storage_hashers.rs  test_pairs.ts
devnets/: CapiConfig.ts  DevNet.ts  DevnetConnection.ts  MetadataNet.ts  Net.ts  NetConfig.ts  Parachain.ts  RelayChain.ts  WsNet.ts  binary.ts  capnHandler.ts  chainSpec.ts  mod.ts  (+8 more)
(+2911 files in other folders)
