[package]
name = "mod"
version = "0.1.0"
edition = "2021"
description = "Awesome Wasm Possum"

[lib]
crate-type = ["cdylib", "rlib"]
path = "bindings/mod.rs"

[features]
all = ["hashers", "sr25519", "ss58"]
default = ["console_error_panic_hook"]
hashers = []
sr25519 = []
ss58 = []

[dependencies]
base58 = { version = "0.2.0" }
blake2 = "0.10.4"
console_error_panic_hook = { version = "0.1.7", optional = true }
frame-support = { version = "3.0.0" }
getrandom = { version = "0.2.5", features = ["js"] }
hex = { version = "0.4.3" }
js-sys = { version = "0.3.56" }
paste = { version = "1.0.6" }
schnorrkel = { version = "0.10.2" }
sp-core = { version = "*" } # TODO: why `*`?
sp-core-hashing = { version = "4.0.0" }
wasm-bindgen = { version = "0.2.80" }
wee_alloc = { version = "0.4.5" }

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
