[package]
name = "mod"
version = "0.1.0"
edition = "2021"
description = "Awesome Wasm Possum"

[lib]
crate-type = ["cdylib", "rlib"]
path = "wasm.rs"

[features]
all = ["hashers"]
default = ["console_error_panic_hook"]
hashers = []

[dependencies]
base58 = { version = "0.2.0" }
blake2 = "0.10.4"
console_error_panic_hook = { version = "0.1.7", optional = true }
frame-support = { version = "3.0.0" }
getrandom = { version = "0.2.5", features = ["js"] }
hex = { version = "0.4.3" }
js-sys = { version = "0.3.56" }
paste = { version = "1.0.6" }
schnorrkel = { version = "0.10.2" }
sp-core = { version = "*" } # TODO: why `*`?
sp-core-hashing = { version = "4.0.0" }
sp-keyring = { version = "*" }
wasm-bindgen = { version = "0.2.80" }
wee_alloc = { version = "0.4.5" }

[profile.release]
codegen-units = 1
lto = true
opt-level = 's'
